# satoriOS

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/superpowers/plans/: 2025-03-30-obsidian-kb-impl-part1-core-infra.md  2025-03-30-obsidian-kb-impl-part2-vault-parser.md  2025-03-30-obsidian-kb-impl-part3-workflows-1.md  2025-03-30-obsidian-kb-impl-part4-workflows-2.md  2025-03-30-obsidian-kb-impl-part5-moc-cli.md  2025-03-30-obsidian-kb-impl-part6-templates.md  2025-03-30-obsidian-kb-impl-part7-skill.md
docs/superpowers/specs/: 2025-03-30-obsidian-knowledge-base-design.md
references/: obsidian-cli-usage.md  para-method.md
skill/: SKILL.md
skill/references/: obsidian-cli.md  para-method.md
src/obsidian_kb/: __init__.py  backup.py  cli.py  config.py  link_resolver.py  parser.py  vault.py
src/obsidian_kb/templates/: __init__.py  brainstorm.md  daily.md  manager.py  moc.md  project.md  research.md
src/obsidian_kb/utils/: __init__.py  check_env.py  frontmatter.py  id_generator.py
src/obsidian_kb/workflows/: __init__.py  archive.py  ask.py  base.py  brainstorm.py  (+9 more)
tests/: conftest.py  test_cli.py  test_config.py  test_link_resolver.py  test_parser.py  test_vault.py
tests/test_templates/: __init__.py  test_manager.py
tests/test_utils/: __init__.py  test_check_env.py  test_frontmatter.py  test_id_generator.py
tests/test_workflows/: conftest.py  test_archive.py  test_ask.py  test_base.py  test_brainstorm.py  test_health_check.py  test_kickoff.py  test_moc_review.py  test_mocs.py  test_open.py  test_research.py  test_review.py  test_start_my_day.py
